# ai-battleship

./: .gitignore  README.md  battleship_model.pth  dqn_battleship.pth  main.py  pyproject.toml  pyrightconfig.json  pyrightconfig.json.bak  setup.sh  start_game.py  test.py  train_agent.py
ai_battleship/: __init__.py  constants.py
ai_battleship/ai/: agent_wrapper.py  ppo.py
ai_battleship/ai/old/: README.md
ai_battleship/envs/: battleship_env_gym.py
ai_battleship/game_phases/: game.py  setup.py
ai_battleship/rl/: new_ppo.py  og_ppo.py
ai_battleship/utils/: grid_utils.py
models/: Battleship_EPISODES-1000_REPEATSHOTS-True_MARKSUNK-True.pth  Battleship_EPISODES-10_REPEATSHOTS-0_MARKSUNK-1.pth  battleship_model.pth  model.pth
src/: constants.py  field.py  grid.py  init_grid.py
src/ai_battleship/: config.py  constants.py  field.py  grid.py  main.py  main_game.py
src/ai_battleship/ai/: battleship_env_gym.py  ppo.py
src/ai_battleship/ai/envs/: __init__.py  battleship_env.py  battleship_env_gym.py
src/ai_battleship/ai/old/: README.md  agent.py  train.py
src/ai_battleship/ai_agent/: agent.py  environment.py  gymnax_env.py  gymnax_wrapper.py  model.py  test_agent.py  test_env.py  train.py  train_jax.py  training_loop.py
src/ai_battleship/ai_agent/old/: agent.py  train.py
src/ai_battleship/ai_agent/purejaxrl/: ppo.py
src/ai_battleship/envs/: __init__.py  battleship_env_gym.py
src/ai_battleship/game_phases/: base.py  game.py  setup.py
src/ai_battleship/utils/: grid_utils.py  visualiser.py
