[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_battleship"
version = "0.1.0"
description = "AI Battleship game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pygame", "numpy", "jax", "gymnax", ]
scripts = { "ai-battleship" = "ai_battleship.main:main" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.basedpyright]
reportUnusedCallResult = "none"
reportUnannotatedClassAttribute = "none"
reportAny = "none"
reportUnknownMemberType = "none"
