[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_battleship"
version = "0.1.0"
description = "AI Battleship game"
authors = [{ name = "Dewaszmi" }]

readme = "README.md"
dependencies = ["pygame", "numpy", "gymnasium", "torch"]

[tool.setuptools.packages.find]
where = ["."]