[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_battleship"
version = "0.1.0"
description = "AI Battleship game"
readme = "README.md"
authors = [{ name = "Dewaszmi", email = "maciej.zyczynski@protonmail.com" }]
requires-python = ">=3.8,<3.11"

dependencies = [
    "tensorboard>=2.10.0",
    "wandb>=0.13.11",
    "gym==0.23.1",
    "gymnasium==0.29.1",
    "torch==2.4.1",
    "moviepy>=1.0.3",
    "pygame>=2.1",
    "huggingface-hub>=0.11.1",
    "rich<12.0",
    "tenacity>=8.2.2",
    "tyro>=0.5.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_battleship"]
